[tool.poetry]
name = "postcom"
version = "0.1.0"
description = "Приложение в котором пользователи могут писать посты и комментировать их"
authors = ["vitek <rgavih@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^4.2"
black = "^24.10.0"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
